fix(customer): fix header wrapping

--- a/customer/src/styles/primaryHead.css
+++ b/customer/src/styles/primaryHead.css
@@ -3,4 +3,6 @@
   font-size: 2.5rem;
   font-family: var(--sans-serif);
   font-weight: 400;
+  line-height: 1;
+  text-align: center;
 }
